Source/WebCore/html/HTMLElement.h
@@ -48,10 +48,6 @@ public:
 
     virtual short tabIndex() const override;
 
-    String innerHTML() const;
-    String outerHTML() const;
-    void setInnerHTML(const String&, ExceptionCode&);
-    void setOuterHTML(const String&, ExceptionCode&);
     void setInnerText(const String&, ExceptionCode&);
     void setOuterText(const String&, ExceptionCode&);
 
